--- a/index.html
+++ b/index.html
@@ -111,6 +111,51 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eligendi doloribus magni nulla molestias quam autem. Placeat facilis, facere eos nisi error quas iure dolorem odit ad totam mollitia. Culpa.</p>
                             </div>
                         </div>
+                        <div class="conhecimentos-img-wrapper">
+                            <img src="imagens/undraw.svg">
+                        </div>
+                    </div>
+                </section>
+
+                <section>
+                    <div class="sessao-header">
+                        <h1>Projetos</h1>
+                    </div>
+                    <div class="projetos">
+                        <div class="card">
+                            <div class="card-img-wrapper">
+                                <img src="imagens/vinha.jpg" alt="uva" />
+                            </div>
+                            <div class="card-info">
+                                <h2>todo list</h2>
+                                <h3>Javascript</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempore officia debitis, aspernatur optio tenetur. Velit porro illum temporibus id quasi ducimus. Voluptate natus, corrupti sapiente fugit deserunt quas veritatis.</p>
+                                <button>Saiba Mais</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img-wrapper">
+                                <img src="imagens/glass.jpg" alt="copo" />
+                            </div>
+                            <div class="card-info">
+                                <h2>Martona</h2>
+                                <h3>HTMl, CSS</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque est consectetur eaque debitis corrupti, nemo doloribus laborum hic velit beatae ab sint illum, neque id voluptatem nisi autem exercitationem veritatis.</p>
+                                <button>Saiba Mais</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img-wrapper">
+                                <img src="imagens/vinho.jpg" alt="vinho" />
+                            </div>
+                            <div class="card-info">
+                                <h2>Casa Bela</h2>
+                                <h3>Html</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error perferendis impedit asperiores quia esse laboriosam nulla maxime aspernatur odit, saepe animi iusto quo cum sed commodi optio exercitationem praesentium vel.</p>
+                                <button>Saiba Mais</button>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                 </section>
 
